force-app/main/default/objects/Account/fields/Client_Interaction_Summary__c.field-meta.xml
<CustomField>
    <fullName>Client_Interaction_Summary__c</fullName>
    <label>Client Interaction Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>