force-app/main/default/objects/Account/fields/Contact_Information_Validated__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information_Validated__c</fullName>
    <label>Contact Information Validated</label>
    <type>Date</type>
</CustomField>