force-app/main/default/objects/Account/fields/FINS_AnnualExpenses__c.field-meta.xml
<CustomField>
    <fullName>FINS_AnnualExpenses__c</fullName>
    <label>Annual Expenses</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$0-$50,000</fullName>
            </value>
            <value>
                <fullName>$50,000-$100,000</fullName>
            </value>
            <value>
                <fullName>$100,000-$250,000</fullName>
            </value>
            <value>
                <fullName>$250,000-$500,000</fullName>
            </value>
            <value>
                <fullName>Over $500,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>