force-app/main/default/objects/Account/fields/FINS_Assets__c.field-meta.xml
<CustomField>
    <fullName>FINS_Assets__c</fullName>
    <description>Asset Management:</description>
    <label>Assets</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>