force-app/main/default/objects/Account/fields/FINS_B2B_Client_Profile_Summary__c.field-meta.xml
<CustomField>
    <fullName>FINS_B2B_Client_Profile_Summary__c</fullName>
    <label>B2B Client Profile Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>