force-app/main/default/objects/Account/fields/FINS_CapitalAppreciationRank__c.field-meta.xml
<CustomField>
    <fullName>FINS_CapitalAppreciationRank__c</fullName>
    <label>Capital Appreciation</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>