force-app/main/default/objects/Account/fields/FINS_CIB_New_Markets__c.field-meta.xml
<CustomField>
    <fullName>FINS_CIB_New_Markets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Markets</label>
    <type>Checkbox</type>
</CustomField>