force-app/main/default/objects/Account/fields/FINS_Client_Profile_Summary__c.field-meta.xml
<CustomField>
    <fullName>FINS_Client_Profile_Summary__c</fullName>
    <description>Using Gen AI to create a summary of the client profile</description>
    <label>Client Profile Summary</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>