force-app/main/default/objects/Account/fields/FINS_ClientSummaryRich__c.field-meta.xml
<CustomField>
    <fullName>FINS_ClientSummaryRich__c</fullName>
    <description>Using Gen AI to create a summary of the client profile</description>
    <label>ClientSummaryRich</label>
    <length>131071</length>
    <type>Html</type>
</CustomField>