force-app/main/default/objects/Account/fields/FINS_Einstein_Account_Insights__c.field-meta.xml
<CustomField>
    <fullName>FINS_Einstein_Account_Insights__c</fullName>
    <inlineHelpText>Choose the insight you&apos;d like to display for this account</inlineHelpText>
    <label>Einstein - Account Insights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Merger &amp; Acquisition</fullName>
            </value>
            <value>
                <fullName>Company Expanding</fullName>
            </value>
            <value>
                <fullName>Company Cost Cutting</fullName>
            </value>
            <value>
                <fullName>Leadership Change</fullName>
            </value>
            <value>
                <fullName>Prospect unresponsive</fullName>
            </value>
            <value>
                <fullName>No communication</fullName>
                <default>true</default>
                <label>No communication</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>