force-app/main/default/objects/Account/fields/FINS_Einstein_Article_1_Title__c.field-meta.xml
<CustomField>
    <fullName>FINS_Einstein_Article_1_Title__c</fullName>
    <inlineHelpText>Enter the title for the first article you&apos;d like to display</inlineHelpText>
    <label>Einstein - Article 1 Title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>