force-app/main/default/objects/Account/fields/FINS_Einstein_Article_2_URL__c.field-meta.xml
<CustomField>
    <fullName>FINS_Einstein_Article_2_URL__c</fullName>
    <inlineHelpText>Enter the URL for the second article you&apos;d like to display</inlineHelpText>
    <label>Einstein - Article 2 URL</label>
    <type>Url</type>
</CustomField>