force-app/main/default/objects/Account/fields/FINS_Einstein_Article_3_Date__c.field-meta.xml
<CustomField>
    <fullName>FINS_Einstein_Article_3_Date__c</fullName>
    <inlineHelpText>Enter the date for the third article you&apos;d like to display</inlineHelpText>
    <label>Einstein - Article 3 Date</label>
    <type>Date</type>
</CustomField>