force-app/main/default/objects/Account/fields/FINS_Einstein_Article_3_Source__c.field-meta.xml
<CustomField>
    <fullName>FINS_Einstein_Article_3_Source__c</fullName>
    <inlineHelpText>Enter the source for the third article you&apos;d like to display</inlineHelpText>
    <label>Einstein - Article 3 Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>