force-app/main/default/objects/Account/fields/FINS_Financial_Plan_Existing__c.field-meta.xml
<CustomField>
    <fullName>FINS_Financial_Plan_Existing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When toggled prototype builder launches goal update workflow in moneyguide pro and updates chance of success on target account&apos;s related financial plan to 90%</description>
    <label>Financial Plan Existing</label>
    <type>Checkbox</type>
</CustomField>