force-app/main/default/objects/Account/fields/FINS_ForeignCurrencyPercentage__c.field-meta.xml
<CustomField>
    <fullName>FINS_ForeignCurrencyPercentage__c</fullName>
    <label>Foreign Currency Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>