force-app/main/default/objects/Account/fields/FINS_ForeignSecuritiesExperience__c.field-meta.xml
<CustomField>
    <fullName>FINS_ForeignSecuritiesExperience__c</fullName>
    <label>Foreign Securities Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InvestmentExperience</valueSetName>
    </valueSet>
</CustomField>