force-app/main/default/objects/Account/fields/FINS_ForeignSecuritiesKnowledge__c.field-meta.xml
<CustomField>
    <fullName>FINS_ForeignSecuritiesKnowledge__c</fullName>
    <label>Foreign Securities Knowledge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InvestmentKnowledge</valueSetName>
    </valueSet>
</CustomField>