force-app/main/default/objects/Account/fields/FINS_ForeignSecuritiesPercentage__c.field-meta.xml
<CustomField>
    <fullName>FINS_ForeignSecuritiesPercentage__c</fullName>
    <label>Foreign Securities Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>