force-app/main/default/objects/Account/fields/FINS_Last_Transaction__c.field-meta.xml
<CustomField>
    <fullName>FINS_Last_Transaction__c</fullName>
    <description>Last Transaction field for Highlights Panel on Account Record</description>
    <label>Last Transaction</label>
    <length>60</length>
    <type>Text</type>
</CustomField>