force-app/main/default/objects/Account/fields/FINS_Lending_Point_of_Entry__c.field-meta.xml
<CustomField>
    <fullName>FINS_Lending_Point_of_Entry__c</fullName>
    <label>Point of Entry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Car Loan</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Personal Loan</fullName>
            </value>
            <value>
                <fullName>Commercial Loan</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Savings Account</fullName>
            </value>
            <value>
                <fullName>Merchant Services</fullName>
            </value>
            <value>
                <fullName>Treasury Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>