force-app/main/default/objects/Account/fields/FINS_Lines_of_Business__c.field-meta.xml
<CustomField>
    <fullName>FINS_Lines_of_Business__c</fullName>
    <label>Lines of Business</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boiler &amp; Machinery</fullName>
            </value>
            <value>
                <fullName>Commercial Auto &amp; Trucking</fullName>
            </value>
            <value>
                <fullName>CommercialProperty</fullName>
                <label>Commercial Property</label>
            </value>
            <value>
                <fullName>Cyber</fullName>
            </value>
            <value>
                <fullName>Environmental Liability</fullName>
            </value>
            <value>
                <fullName>Excess Casualty &amp; Umbrella</fullName>
            </value>
            <value>
                <fullName>General Liability</fullName>
            </value>
            <value>
                <fullName>Group Benefits</fullName>
            </value>
            <value>
                <fullName>Inland Marine</fullName>
            </value>
            <value>
                <fullName>Management &amp; Professional Liability</fullName>
            </value>
            <value>
                <fullName>Ocean Marine</fullName>
            </value>
            <value>
                <fullName>Small Business Owner&apos;s Policy</fullName>
            </value>
            <value>
                <fullName>SuretyBonds</fullName>
                <label>Surety Bonds</label>
            </value>
            <value>
                <fullName>Workers Compensation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>