force-app/main/default/objects/Account/fields/FINS_New_Financial_Plan__c.field-meta.xml
<CustomField>
    <fullName>FINS_New_Financial_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When Toggled, a flow will run to launch prototype clickthrough for moneyguide pro workflow and New financial plan and financial goals will be created related to target records</description>
    <label>Financial Plan New</label>
    <type>Checkbox</type>
</CustomField>