force-app/main/default/objects/Account/fields/FINS_Private_Equity_Investment_Focus__c.field-meta.xml
<CustomField>
    <fullName>FINS_Private_Equity_Investment_Focus__c</fullName>
    <label>Investment Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Early Start Up Fund</fullName>
            </value>
            <value>
                <fullName>Fund of Funds</fullName>
            </value>
            <value>
                <fullName>Growth Fund</fullName>
            </value>
            <value>
                <fullName>Commercial Real Estate</fullName>
            </value>
            <value>
                <fullName>Residential Real Estate</fullName>
            </value>
            <value>
                <fullName>Mixed Use Properties</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>