force-app/main/default/objects/Account/fields/FINS_Rating_Indicator__c.field-meta.xml
<CustomField>
    <fullName>FINS_Rating_Indicator__c</fullName>
    <formula>IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (FINS_Value__c &gt; 0, &apos;015Kc000001ALB7&apos;, &apos;015Kc000001ALB8&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (FINS_Value__c &gt; 1, &apos;015Kc000001ALB7&apos;, &apos;015Kc000001ALB8&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (FINS_Value__c &gt; 2, &apos;015Kc000001ALB7&apos;, &apos;015Kc000001ALB8&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (FINS_Value__c &gt; 3, &apos;015Kc000001ALB7&apos;, &apos;015Kc000001ALB8&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (FINS_Value__c &gt; 4, &apos;015Kc000001ALB7&apos;, &apos;015Kc000001ALB8&apos;),&apos;&apos;,22,22)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value Indicator</label>
    <type>Text</type>
</CustomField>