force-app/main/default/objects/Account/fields/FINS_Relationship_Plan__c.field-meta.xml
<CustomField>
    <fullName>FINS_Relationship_Plan__c</fullName>
    <label>Relationship Plan</label>
    <type>Url</type>
</CustomField>