force-app/main/default/objects/Account/fields/FINS_Requests_Last_30__c.field-meta.xml
<CustomField>
    <fullName>FINS_Requests_Last_30__c</fullName>
    <label># of Requests (Last 30 Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>