force-app/main/default/objects/Account/fields/FINS_Retail_Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>FINS_Retail_Net_Worth__c</fullName>
    <formula>FINS_Retail_Annual_Income__c+ FINS_Retail_Personal_Assets__c+ FINS_Retail_Other_Income__c-FINS_Retail_Liabilities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Worth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>