force-app/main/default/objects/Account/fields/FINS_Retail_Other_Income__c.field-meta.xml
<CustomField>
    <fullName>FINS_Retail_Other_Income__c</fullName>
    <label>Other Income</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>