force-app/main/default/objects/Account/fields/FINS_Retail_Personal_Assets__c.field-meta.xml
<CustomField>
    <fullName>FINS_Retail_Personal_Assets__c</fullName>
    <label>Personal Assets</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>