force-app/main/default/objects/Account/fields/FINS_SpecialExpenses__c.field-meta.xml
<CustomField>
    <fullName>FINS_SpecialExpenses__c</fullName>
    <label>Special Expenses</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$0-$50,000</fullName>
            </value>
            <value>
                <fullName>$50,000-$100,000</fullName>
            </value>
            <value>
                <fullName>$100,000-$250,000</fullName>
            </value>
            <value>
                <fullName>Over $250,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>