force-app/main/default/objects/Account/fields/FINS_StocksPercentage__c.field-meta.xml
<CustomField>
    <fullName>FINS_StocksPercentage__c</fullName>
    <label>Stocks Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>