force-app/main/default/objects/Account/fields/FINS_Summary_of_Financial_Accounts__c.field-meta.xml
<CustomField>
    <fullName>FINS_Summary_of_Financial_Accounts__c</fullName>
    <description>Using Gen AI to create a summary of the client profile</description>
    <label>Summary of Financial Accounts</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>