force-app/main/default/objects/Account/fields/FINS_Summary_of_Open_Cases__c.field-meta.xml
<CustomField>
    <fullName>FINS_Summary_of_Open_Cases__c</fullName>
    <description>Using Gen AI to create a summary of the client profile</description>
    <label>Summary of Open Cases</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>