force-app/main/default/objects/Account/fields/FINS_Summary_of_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>FINS_Summary_of_Opportunities__c</fullName>
    <label>Summary of Opportunities</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>