force-app/main/default/objects/Account/fields/FINS_Value__c.field-meta.xml
<CustomField>
    <fullName>FINS_Value__c</fullName>
    <description>This field drives the Value Indicator field.  Enter a value of 1-5.</description>
    <label>Value</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>