force-app/main/default/objects/Account/fields/FINS_X12_Months_Sales_Trend__c.field-meta.xml
<CustomField>
    <fullName>FINS_X12_Months_Sales_Trend__c</fullName>
    <description>12 months sales trend for Asset Mgmt</description>
    <label>12 Months Sales Trend</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>