force-app/main/default/objects/Account/fields/FINS_X90_Day_Sales_Trend__c.field-meta.xml
<CustomField>
    <fullName>FINS_X90_Day_Sales_Trend__c</fullName>
    <description>Asset Management: 90 Days&apos; trend of assets as a %</description>
    <label>90 Day Sales Trend</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>