force-app/main/default/objects/Account/fields/FINS_Years_to_Retirement__c.field-meta.xml
<CustomField>
    <fullName>FINS_Years_to_Retirement__c</fullName>
    <formula>65 - (if(And(Month(Today())&gt;= month(PersonBirthdate), Day(Today()) &gt;= Day(PersonBirthdate)),
Year(Today())- Year(PersonBirthdate) +
(Month(Today())-Month(PersonBirthdate))/12,
if(And(month(Today())&lt; month(PersonBirthdate), Day(Today())&gt;= Day(PersonBirthdate)),
Year(Today())-Year(PersonBirthdate)-1 +
(12 - Month(PersonBirthdate)+month(Today()))/12,
if(And( month(Today())&lt; month(PersonBirthdate), Day(Today())&lt; Day(PersonBirthdate)),
(Year(Today())-Year(PersonBirthdate)-1) +
((12 - Month(PersonBirthdate)+month(Today())-1))/12,
if(And( month(Today())= month(PersonBirthdate), Day(Today())&lt; Day(PersonBirthdate)),
(Year(Today())- Year(PersonBirthdate)-1) + (11/12),
(Year(Today())- Year(PersonBirthdate)) +
(Month(Today())-Month(PersonBirthdate)-1)/12)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Years to Retirement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>