force-app/main/default/objects/Account/fields/FinServ_IDO_Flags__c.field-meta.xml
<CustomField>
    <fullName>FinServ_IDO_Flags__c</fullName>
    <label>IDO Flags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FinServ_IDO_Flags</valueSetName>
    </valueSet>
</CustomField>