force-app/main/default/objects/Account/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <label>% Ownership</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>