force-app/main/default/objects/Account/fields/Paused_Card__c.field-meta.xml
<CustomField>
    <fullName>Paused_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paused Card</label>
    <type>Checkbox</type>
</CustomField>