force-app/main/default/objects/Account/fields/TDD_TTY__c.field-meta.xml
<CustomField>
    <fullName>TDD_TTY__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Impaired hearing</description>
    <inlineHelpText>Does this individual have impaired hearing?</inlineHelpText>
    <label>TDD / TTY</label>
    <type>Checkbox</type>
</CustomField>