force-app/main/default/objects/Account/recordTypes/FINS_Entity.recordType-meta.xml
<RecordType>
    <fullName>FINS_Entity</fullName>
    <active>true</active>
    <description>Business Entity or an Organization</description>
    <label>Entity</label>
</RecordType>